--- a/Django/website_live/blog/templates/blog/create.html
+++ b/Django/website_live/blog/templates/blog/create.html
@@ -1,6 +1,6 @@
 {% extends "blog/base.html" %}
 {% block body_content %}
-<h1>User account profile creation</h1>
+<h1>Blog post creation</h1>
 {% if errors %}
 <div class="alert alert-danger d-flex align-items-center" role="alert">
     <ul>
